test/vminsns/setglobal.inc2
(vmInstruction, needContext)
setglobal : JSValue -> JSValue
setglobal (v1, v2) {
  if (Set_prop_global(v1, v2) == FAIL) {
    // error
  }
}